[package]
name = "torrust-index"
readme = "README.md"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[workspace.package]
authors = ["Nautilus Cyberneering <info@nautilus-cyberneering.de>, Mick van Dijke <mick@dutchbits.nl>"]
categories = ["network-programming", "web-programming"]
description = "A BitTorrent Index"
documentation = "https://docs.rs/crate/torrust-tracker/"
edition = "2021"
homepage = "https://torrust.com/"
keywords = ["bittorrent", "file-sharing", "index", "peer-to-peer", "torrent"]
license = "AGPL-3.0-only"
publish = true
repository = "https://github.com/torrust/torrust-tracker"
rust-version = "1.72"
version = "3.0.0-alpha.1-develop"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
argon2 = "0"
async-trait = "0"
axum = { version = "0", features = ["multipart"] }
binascii = "0"
bytes = "1"
chrono = { version = "0", default-features = false, features = ["clock"] }
config = "0"
derive_more = "0"
email_address = "0"
fern = "0"
futures = "0"
hex = "0"
hyper = "0"
indexmap = "1"
jsonwebtoken = "8"
lazy_static = "1.4.0"
lettre = { version = "0", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls", "tokio1-rustls-tls"] }
log = "0"
pbkdf2 = { version = "0", features = ["simple"] }
rand_core = { version = "0", features = ["std"] }
regex = "1"
reqwest = { version = "0", features = ["json", "multipart"] }
serde = { version = "1", features = ["rc"] }
serde_bencode = "0"
serde_bytes = "0"
serde_derive = "1"
serde_json = "1"
sha-1 = "0"
sqlx = { version = "0", features = ["migrate", "mysql", "runtime-tokio-native-tls", "sqlite", "time"] }
tera = { version = "1", default-features = false }
text-colorizer = "1"
text-to-png = "0"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0"
torrust-index-located-error = { version = "3.0.0-alpha.1-develop", path = "packages/located-error" }
tower-http = { version = "0", features = ["compression-full", "cors"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rand = "0"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
which = "4"
