[package]
default-run = "torrust-index"
name = "torrust-index"
readme = "README.md"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[workspace.package]
authors = ["Nautilus Cyberneering <info@nautilus-cyberneering.de>, Mick van Dijke <mick@dutchbits.nl>"]
categories = ["network-programming", "web-programming"]
description = "A BitTorrent Index"
documentation = "https://docs.rs/crate/torrust-tracker/"
edition = "2021"
homepage = "https://torrust.com/"
keywords = ["bittorrent", "file-sharing", "index", "peer-to-peer", "torrent"]
license = "AGPL-3.0-only"
publish = true
repository = "https://github.com/torrust/torrust-tracker"
rust-version = "1.72"
version = "3.0.0-alpha.3-develop"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
anyhow = "1.0.81"
argon2 = "0"
async-trait = "0"
axum = { version = "0", features = ["multipart"] }
axum-server = { version = "0", features = ["tls-rustls"] }
binascii = "0"
bytes = "1"
camino = { version = "1.1.6", features = ["serde"] }
chrono = { version = "0", default-features = false, features = ["clock"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
derive_more = "0"
email_address = "0"
fern = "0"
figment = { version = "0.10", features = ["env", "test", "toml"] }
futures = "0"
futures-util = "0.3.30"
hex = "0"
http = "1.1.0"
http-body = "1.0.0"
hyper = "1"
hyper-util = { version = "0.1.3", features = ["http1", "http2", "tokio"] }
indexmap = "2"
jsonwebtoken = "9"
mockall = "0.12.1"
lazy_static = "1.4.0"
lettre = { version = "0", features = [
    "builder",
    "file-transport-envelope",
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls",
    "tokio1-rustls-tls",
] }
log = "0"
pbkdf2 = { version = "0", features = ["simple"] }
pin-project-lite = "0.2"
rand = "0"
rand_core = { version = "0", features = ["std"] }
regex = "1"
reqwest = { version = "0", features = ["json", "multipart"] }
rustversion = "1.0.14"
serde = { version = "1", features = ["derive", "rc"] }
serde_bencode = "0"
serde_bytes = "0"
serde_derive = "1"
serde_json = "1"
serde_with = "3.8.1"
sha-1 = "0"
sqlx = { version = "0", features = ["migrate", "mysql", "runtime-tokio-native-tls", "sqlite", "time"] }
tera = { version = "1", default-features = false }
text-colorizer = "1"
text-to-png = "0"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0"
torrust-index-located-error = { version = "3.0.0-alpha.3-develop", path = "packages/located-error" }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0", features = ["compression-full", "cors", "propagate-header", "request-id", "trace"] }
trace = "0.1.7"
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
casbin = "2.2.0"

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
which = "6"
