[package]
default-run = "torrust-index"
name = "torrust-index"
readme = "README.md"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[workspace.package]
authors = ["Nautilus Cyberneering <info@nautilus-cyberneering.de>, Mick van Dijke <mick@dutchbits.nl>"]
categories = ["network-programming", "web-programming"]
description = "A BitTorrent Index"
documentation = "https://docs.rs/crate/torrust-tracker/"
edition = "2021"
homepage = "https://torrust.com/"
keywords = ["bittorrent", "file-sharing", "index", "peer-to-peer", "torrent"]
license = "AGPL-3.0-only"
publish = true
repository = "https://github.com/torrust/torrust-tracker"
rust-version = "1.72"
version = "3.0.0-develop"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
torrust-index-located-error = { version = "3.0.0-develop", path = "packages/located-error" }

anyhow = "1"
argon2 = "0"
async-trait = "0"
axum = { version = "0", features = ["multipart"] }
axum-server = { version = "0", features = ["tls-rustls"] }
binascii = "0"
bytes = "1"
camino = { version = "1", features = ["serde"] }
casbin = "2"
chrono = { version = "0", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
derive_more = "1"
email_address = "0"
figment = { version = "0", features = ["env", "test", "toml"] }
futures = "0"
futures-util = "0"
hex = "0"
http = "1"
http-body = "1"
hyper = "1"
hyper-util = { version = "0", features = ["http1", "http2", "tokio"] }
indexmap = "2"
jsonwebtoken = "9"
lazy_static = "1"
lettre = { version = "0", features = [
    "builder",
    "file-transport-envelope",
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls",
    "tokio1-rustls-tls",
] }
log = "0"
mockall = "0"
pbkdf2 = { version = "0", features = ["simple"] }
pin-project-lite = "0"
rand = "0"
rand_core = { version = "0", features = ["std"] }
regex = "1"
reqwest = { version = "0", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_bencode = "0"
serde_bytes = "0"
serde_derive = "1"
serde_json = "1"
serde_with = "3"
sha-1 = "0"
sqlx = { version = "0", features = ["migrate", "mysql", "runtime-tokio-native-tls", "sqlite", "time"] }
tera = { version = "1", default-features = false }
text-colorizer = "1"
text-to-png = "0"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0"
tower = { version = "0", features = ["timeout"] }
tower-http = { version = "0", features = ["compression-full", "cors", "propagate-header", "request-id", "trace"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["json"] }
url = { version = "2", features = ["serde"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
which = "6"

[package.metadata.cargo-machete]
ignored = ["sha-1", "futures"]

[lints.clippy]
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# temp allow this lint
needless_return = "allow"
